# pw-manager

./: .gitignore  env.example  pyproject.toml
alembic/: env.py
alembic/versions/: 01308d5d4efe_.py  1114b9733782_.py  1d334dde7e7a_.py  1deebe2ab903_.py  5ea3305d2067_.py  67977dfa5c0f_create_user_and_credential_model.py  69b79771bbb6_.py  adc184b20fbe_user_model_password_field_name_change.py  bbe55416ec9c_.py  cb2765c60858_creating_user_and_credentials_model.py  cdee8d7a8f5c_.py  d8959c0a7403_.py  dd0e4c6bf1cd_.py  f4f7b277bfc2_.py
app/: main.py  utils.py
app/api/: dependencies.py  main.py
app/api/routers/v1/: credentials.py  login.py  users.py
app/api/routers/v1/admin/: credentials.py  main.py  users.py
app/api/routes/v1/: admin.py  credentials.py  login.py  users.py
app/api/routes/v1/admin/: credentials.py  main.py  users.py
app/core/: config.py  db.py  security.py
app/crud/: base.py  credentials.py  users.py
app/db/: credentials.py  users.py
app/email-templates/src/: new_account_activate.mjml
app/schemas/: admin.py  credentials.py  users.py
app/tests/: conftest.py
app/tests/api/routers/: test_admin.py  test_admin_credentials.py  test_admin_users.py  test_credentials.py  test_login.py  test_users.py
app/tests/crud/: test_credentials.py  test_user.py  test_users.py
app/tests/utils/: credentials.py  user.py  utils.py
